# agentforge

./: .env.example  .gitignore  AGENTFORGE_CLI.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_cli.py  setup.py
agent/: __init__.py
agent/core/: __init__.py  loop.py  message.py  providers.py  state.py
agent/hooks/: __init__.py  handlers.py  registry.py
agent/mcp/: __init__.py  client.py  server.py
agent/memory/: __init__.py  compaction.py  store.py
agent/permissions/: __init__.py  pipeline.py  rules.py
agent/planning/: __init__.py  task.py  todo.py
agent/teams/: __init__.py  bus.py  coordinator.py  mailbox.py
agent/tools/: __init__.py  bash.py  file.py  glob.py  registry.py
agentforge/: README.md  __init__.py  __main__.py  cli.py
agentforge/tutorials/: teach-cli.html  teach-hook-system.html  teach-mcp-integration.html  teach-memory-system.html  teach-permission-system.html  teach-planning-system.html  teach-summary.html  teach-tool-system.html
docs/: RECORDING_GUIDE.md
docs/tutorials/: teach-agent-loop.html  teach-cli.html  teach-hook-system.html  teach-index.html  teach-mcp-integration.html  teach-memory-system.html  teach-permission-system.html  teach-planning-system.html  teach-summary.html  teach-team-collaboration.html  teach-tool-system.html
examples/: agent_final.py  agent_fixed.py  agent_mimo.py  agent_mimo_anthropic.py  basic_agent.py  demo_no_api.py  demo_simple.py  multi_agent.py
scripts/: demo_gif.py  full_demo.py  generate_gif.py  record_demo.sh
tests/: test_core.py
